--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-	"name" : "dtn-client",
+	"name" : "@simpleview/dtn-client",
 	"description" : "Wrapper library for Google Ad Manager",
 	"author" : "Quinton Price <gotshogi@gmail.com>",
 	"version" : "1.0.0",
 	"devDependencies" : {
+		"chokidar" : "2.1.2",
+		"express" : "4.16.4",
 		"webpack" : "4.28.1",
 		"webpack-cli" : "3.2.1"
 	},
 	"main" : "src/index.js",
 	"engines" : { "node" : ">=0.10.x" },
 	"scripts" : {
+		"start" : "node src/server.js",
 		"build" : "webpack --config webpack.config.js",
 		"docker" : "./docker/build && ./docker/run || true"
 	},
