--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
 	"name" : "@simpleview/dtn-client",
 	"description" : "Wrapper library for Google Ad Manager",
 	"author" : "Quinton Price <gotshogi@gmail.com>",
-	"version" : "1.0.0",
+	"version" : "1.0.1",
 	"devDependencies" : {
 		"chokidar" : "2.1.2",
 		"express" : "4.16.4",
 		"webpack" : "4.28.1",
 		"webpack-cli" : "3.2.1"
 	},
+	"unpkg" : "dist/index.min.js",
 	"main" : "src/index.js",
 	"engines" : { "node" : ">=0.10.x" },
 	"scripts" : {
