Attempts to setup circleci. Fixes bug with IE. Adds unit tests for "template".

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,4 +5,9 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 COPY package.json /app/package.json
 RUN cd /app && npm install
 
+COPY testing /app/testing
+COPY src /app/src
+COPY dist /app/dist
+COPY webpack.config.js /app/webpack.config.js
+
 WORKDIR /app
