Ignores circleci. Possible fix to build.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ jobs:
     steps:
       - checkout
       - run: |
-        ./dev/build
+        bash ./dev/build
         docker run dtn-client:local npm test
