--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ jobs:
     steps:
       - checkout
       - run: |
-        bash ./dev/build
-        docker run dtn-client:local npm test
+          ./dev/build
+          docker run dtn-client:local npm test
